--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: unicode
   database: todo_development
   pool: 5
-  username: 
+  username: matt
   password:
 
 test:
@@ -11,7 +11,7 @@ test:
   encoding: unicode
   database: todo_test
   pool: 5
-  username: 
+  username: matt
   password:
 
 production:
